@@ -1,3 +1,8 @@
+2009-01-21  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclStringObj.c: New fix for [Bug 2494093] replaces the
+	flawed attempt committed 2009-01-09.
+
 2009-01-19  Kevin B. Kenny  <kennykb@acm.org>
 
 	* unix/Makefile.in: Added a CONFIG_INSTALL_DIR parameter so that
